# certmonger

./: 0001-Add-an-alternate-accepted-result-for-DSA-keygen.patch  0001-Stop-assuming-RSA-512-works.patch  0002-Accept-1016-instead-of-1024-bit-for-DSA-keygen.patch  0002-Stop-assuming-RSA-512-works-part-two.patch  0003-Add-issuer-request-option-for-specifying-issuer.patch  0003-Get-vague-about-what-we-expect-from-certutil.patch  0004-Documentation-mark-CERTMONGER_CA_ISSUER-as-0.79.patch  0004-Drop-workarounds-for-DSA-keygen-with-NSS.patch  0005-Accept-cases-where-NSS-insists-on-2048-bit-DSA.patch  0005-Comment-whitespace-fixup.patch  0006-Fix-a-possible-uninitialized-memory-read.patch  0006-ipa-submit-Retry-without-ca-on-OptionError.patch  0007-Remove-tests-of-512-bit-keys-they-are-unsupported-no.patch  0007-getcert-fix-a-potential-out-of-bounds.patch  0008-Document-the-X-option-in-the-ipa-submit-man-page.patch  0009-Fix-a-flakiness-in-the-028-dbus-test.patch  0010-Set-all-bits-to-1-in-local-CA-Basic-Constraint-to-se.patch  0011-Fix-conversions-of-bit-lengths-to-byte-lengths.patch  0012-Remove-trailing-CR-LF-when-reading-passwords-from-a-.patch  0013-Disable-the-10-iterate-tests-which-randomly-fail.patch  0014-MS-cert-template-add-D-Bus-property-and-storage.patch  0015-MS-cert-template-add-template-extension-to-CSR.patch  0016-MS-cert-template-add-option-to-command-line-programs.patch  0017-MS-cert-template-validate-argument.patch  0018-MS-cert-template-add-tests.patch  0019-Fix-C99-build-error-on-EL7-systems.patch  0020-If-stderr-is-not-a-tty-log-to-syslog-so-the-helpers-.patch  0021-On-PKCS-7-verify-failures-log-the-PKCS-7-file-fix-va.patch  0022-Allow-configuration-of-client-SCEP-algorithms.patch  0023-Updates-per-Feedback.patch  0024-Updated-tests.patch  0025-Add-cipher-and-digest-difference-messages.patch  1001-Remove-rekey-feature.patch  1002-Fix-CA-option-name-for-ipa-cert-request.patch  Makefile  README.md  certmonger-0.61-bitfields.patch  certmonger-0.61-locks1.patch  certmonger-0.61-locks2.patch  certmonger-0.61-locks3.patch  (+9 more)
src/: LICENSE  Makefile.am  Makefile.in  README  STATUS  aclocal.m4  certmonger.spec  configure  configure.ac
src/dbus/: Makefile.am  Makefile.in  certmonger.conf.in  certmonger.service.in
src/doc/: api.txt  certmaster-submit.txt  design.txt  dogtag-notes-2.txt  dogtag-notes.txt  fips.txt  ftw.txt  getting-started.txt  helpers.txt  ipa-submit.txt  local-signer.txt  sbexample.txt  scep.odp  scep.txt  selinux.txt  submit.txt
src/po/: Makevars  POTFILES.in  ach.gmo  ach.po  af.gmo  af.po  af_ZA.gmo  af_ZA.po  aln.gmo  aln.po  am.gmo  am.po  ar.gmo  ar.po  as.gmo  as.po  ast.gmo  ast.po  az.gmo  az.po  bal.gmo  bal.po  be.gmo  be.po  bg.gmo  bg.po  bn.gmo  bn.po  bn_IN.gmo  bn_IN.po  bo.gmo  bo.po  br.gmo  br.po  brx.gmo  brx.po  bs.gmo  bs.po  ca.gmo  ca.po  (+199 more)
src/src/: Makefile.am  Makefile.in  cadata.c  cadata.h  canalyze.c  canalyze.h  casave.c  casave.h  certext-n.h  certext.c  certext.h  certmaster-getcert.1.in  certmaster-getcert.c  certmaster.c  certmonger-certmaster-submit.8.in  certmonger-dogtag-ipa-renew-agent-submit.8.in  certmonger-dogtag-submit.8.in  certmonger-ipa-submit.8.in  certmonger-local-submit.8.in  certmonger-scep-submit.8.in  certmonger.8.in  certmonger.conf.5.in  certmonger.conf.in  certread-int.h  certread-n.c  certread-o.c  certread.c  certread.h  certsave-int.h  certsave-n.c  certsave-o.c  certsave.c  certsave.h  cm.c  cm.h  config.h.in  csrgen-int.h  csrgen-n.c  csrgen-o.c  csrgen.c  (+130 more)
src/systemd/: Makefile.am  Makefile.in  certmonger.conf.in  certmonger.path.in  certmonger.service.in  org.fedorahosted.certmonger.service.in
src/sysvinit/: Makefile.am  Makefile.in  certmonger.in
src/tests/: Makefile.am  Makefile.in  certmonger.conf  functions  run-tests.sh
src/tests/001-keyiread/: expected.out  run.sh
src/tests/001-keyiread-dsa/: expected.out  run.sh
src/tests/001-keyiread-ec/: expected.out  expected.out.2  expected.out.3  expected.out.4  run.sh
src/tests/001-keyiread-rsa/: expected.out  run.sh
src/tests/002-keygen/: expected.out  run.sh
src/tests/002-keygen-dsa/: expected.out  expected.out.2  expected.out.3  run.sh
src/tests/002-keygen-ec/: expected.out  expected.out.2  expected.out.3  expected.out.4  run.sh
src/tests/002-keygen-rsa/: expected.out  run.sh
src/tests/003-csrgen/: expected.out  run.sh
src/tests/003-csrgen-dsa/: expected.out  run.sh
src/tests/003-csrgen-ec/: expected.out  run.sh
src/tests/003-csrgen-rsa/: expected.out  run.sh
src/tests/004-selfsign/: expected.out  run.sh
src/tests/004-selfsign-dsa/: expected.out  run.sh
src/tests/004-selfsign-ec/: run.sh
src/tests/004-selfsign-rsa/: run.sh
src/tests/005-dbusm/: expected.out  run.sh
src/tests/006-serial/: expected.out  run.sh
src/tests/007-certsave/: expected.out  run.sh
src/tests/007-certsave-dbm/: prequal.sh  run.sh
src/tests/007-certsave-sql/: expected.out  run.sh
src/tests/008-certread/: expected.out  run.sh
src/tests/009-oiddict/: expected.out  run.sh
src/tests/010-iterate/: expected.out  run.sh
src/tests/011-dbinit/: expected.out  run.sh
src/tests/011-dbinit-dbm/: run.sh
src/tests/011-dbinit-sql/: expected.out  run.sh
src/tests/012-dbadd/: run.sh
src/tests/012-dbadd-dbm/: expected.out  run.sh
src/tests/012-dbadd-sql/: run.sh
src/tests/013-enckey/: expected.out  run.sh
src/tests/013-enckey-dbm/: expected.out  run.sh
src/tests/013-enckey-sql/: expected.out  run.sh
src/tests/014-prefs/: expected.out  run.sh
src/tests/015-lockedkey/: expected.out  run.sh
src/tests/015-lockedkey-dbm/: expected.out  run.sh
src/tests/015-lockedkey-sql/: expected.out  run.sh
src/tests/016-dates/: expected.out  run.sh
src/tests/017-notoken/: expected.out  run.sh
src/tests/017-notoken-dbm/: expected.out  run.sh
src/tests/017-notoken-sql/: expected.out  run.sh
src/tests/018-pembase/: expected.out  run.sh
src/tests/019-dparse/: bad.checkRequest.nosuch  bad.displayCertFromRequest.incomplete  bad.displayCertFromRequest.no-such-request  bad.displayCertFromRequest.rejected  bad.profileSubmit.csr.empty  (+19 more)
(+115 files in other folders)
